--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,13 @@
 {
     "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
-    "extends": ["plugin:@typescript-eslint/recommended"],
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "plugin:storybook/recommended"
+    ],
     "rules": {
-      "@typescript-eslint/no-var-requires": "warn"
+        "@typescript-eslint/no-var-requires": "warn"
     }
-  }
-  
+}
