--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "rollup -c",
     "lint": "eslint './{src,app}/**/*.{ts,tsx}'",
     "size": "size-limit",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -29,10 +31,19 @@
     "typescript": ">=3.7.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
     "@size-limit/preset-small-lib": "^9.0.0",
+    "@storybook/addon-essentials": "^8.1.6",
+    "@storybook/addon-interactions": "^8.1.6",
+    "@storybook/addon-links": "^8.1.6",
+    "@storybook/addon-onboarding": "^8.1.6",
+    "@storybook/blocks": "^8.1.6",
+    "@storybook/react": "^8.1.6",
+    "@storybook/react-vite": "^8.1.6",
+    "@storybook/test": "^8.1.6",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
@@ -42,6 +53,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-storybook": "^0.8.0",
     "identity-obj-proxy": "^3.0.0",
     "npm": "^10.1.0",
     "postcss": "^8.4.30",
@@ -55,6 +67,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "size-limit": "^9.0.0",
+    "storybook": "^8.1.6",
     "typescript": "^5.2.2"
   },
   "dependencies": {
