--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elishaya-react-modal-lib",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "A modal lib component for React",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,8 @@
     "size": "size-limit",
     "prepare": "npm run build",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook:build": "storybook build",
+    "storybook:publish": "npm run storybook:build && touch ./storybook-static/.nojekyll && gh-pages -d ./storybook-static -t true"
   },
   "repository": {
     "type": "git",
@@ -56,6 +57,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-storybook": "^0.8.0",
+    "gh-pages": "^6.1.1",
     "identity-obj-proxy": "^3.0.0",
     "npm": "^10.1.0",
     "postcss": "^8.4.30",
